@@ -164,8 +164,8 @@
 			</analyzer>
 
 			<!-- Autocompletion -->
-			<analyzer name="Autocompletion" lang="">
-				<tokenizer class="LetterOrDigitTokenizerFactory" />
+			<analyzer name="AutoCompletionAnalyzer" lang="">
+				<tokenizer class="StandardTokenizer" />
 				<filter class="ShingleFilter" max_shingle_size="5"
 					min_shingle_size="1" scope="QUERY_INDEX" token_separator=" " />
 				<filter class="PrefixSuffixStopFilter" ignore_case="true"
@@ -208,6 +208,8 @@
 			<field name="fileNameExact" analyzer="StandardAnalyzer"
 				indexed="yes" stored="no" termVector="no" />
 			<field name="fileNamePhonetic" analyzer="PhoneticAnalyzer"
+				indexed="yes" stored="no" termVector="no" />
+			<field name="autocomplete" analyzer="AutoCompletionAnalyzer"
 				indexed="yes" stored="no" termVector="no" />
 		</fields>
 	</schema>
