@@ -24,6 +24,8 @@ New features:
 OpenSearchServer 1.2.4
 
 New features:
+- 3489935: Default stop words list
+- 3489934: A default autocomplete field and analyzer
 - 3489873: A scheduler task to copy terms to an index
 - 3487772: Advanced spell check
 - 3487219: RegExp filter for DatabaseCrawler
